<com.zhy.android.percent.support.PercentRelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#D9D4EDF4"
    android:fitsSystemWindows="true">

    <RelativeLayout
        android:id="@+id/rl_configuration_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true">

        <Button
            android:id="@+id/btn_return"
            android:layout_width="42dp"
            android:layout_height="28dp"
            android:layout_centerVertical="true"
            android:layout_marginStart="12dp"
            android:layout_marginLeft="12dp"
            android:background="@drawable/bg_button"
            android:fitsSystemWindows="true"
            android:text="@string/btn_back" />

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:layout_marginBottom="18dp"
            android:layout_toStartOf="@+id/btn_confirm"
            android:layout_toLeftOf="@+id/btn_confirm"
            android:layout_toEndOf="@+id/btn_return"
            android:layout_toRightOf="@+id/btn_return"
            android:fitsSystemWindows="true"
            android:gravity="center_horizontal"
            android:text="@string/tv_configuration_option"
            android:textColor="@android:color/black"
            android:textSize="32sp" />

        <Button
            android:id="@+id/btn_confirm"
            android:layout_width="42dp"
            android:layout_height="28dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="12dp"
            android:layout_marginRight="12dp"
            android:background="@drawable/bg_button"
            android:fitsSystemWindows="true"
            android:text="@string/btn_confirm" />

        <View
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:layout_below="@+id/tv_title"
            android:layout_centerHorizontal="true"
            android:background="@android:color/white" />

    </RelativeLayout>

    <TextView
        android:id="@+id/tv_game_difficulty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rl_configuration_title"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp"
        android:text="@string/tv_game_difficulty"
        android:textColor="#334252"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/tv_explain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_game_difficulty"
        android:layout_centerHorizontal="true"
        android:text="@string/tv_explain"
        android:textColor="#74828F" />

    <Button
        android:id="@+id/btn_difficulty_4"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_below="@+id/tv_explain"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:layout_toStartOf="@+id/btn_difficulty_5"
        android:layout_toLeftOf="@+id/btn_difficulty_5"
        android:background="@drawable/bg_button"
        android:text="@string/btn_difficulty_4"
        android:textSize="24sp"
        app:layout_heightPercent="7%"
        app:layout_widthPercent="20%" />

    <Button
        android:id="@+id/btn_difficulty_5"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_below="@+id/tv_explain"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:background="@drawable/bg_button"
        android:drawablePadding="0dp"
        android:text="@string/btn_difficulty_5"
        android:textSize="24sp"
        app:layout_heightPercent="7%"
        app:layout_widthPercent="20%" />

    <Button
        android:id="@+id/btn_difficulty_6"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_below="@+id/tv_explain"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="20dp"
        android:layout_toEndOf="@+id/btn_difficulty_5"
        android:layout_toRightOf="@+id/btn_difficulty_5"
        android:background="@drawable/bg_button"
        android:text="@string/btn_difficulty_6"
        android:textSize="24sp"
        app:layout_heightPercent="7%"
        app:layout_widthPercent="20%" />

    <TextView
        android:id="@+id/tv_game_volume"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_difficulty_5"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:text="@string/tv_setting_volume"
        android:textColor="#334252"
        android:textSize="20sp" />

    <Button
        android:id="@+id/btn_volume_on"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_below="@+id/tv_game_volume"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="12dp"
        android:layout_marginRight="12dp"
        android:layout_toStartOf="@+id/view_divider"
        android:layout_toLeftOf="@+id/view_divider"
        android:background="@drawable/bg_button"
        android:text="@string/btn_volume_on"
        app:layout_heightPercent="7%"
        app:layout_widthPercent="20%" />

    <View
        android:id="@+id/view_divider"
        android:layout_width="1dp"
        android:layout_height="24dp"
        android:layout_below="@id/tv_game_volume"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:visibility="invisible" />

    <Button
        android:id="@+id/btn_volume_off"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_below="@+id/tv_game_volume"
        android:layout_marginStart="12dp"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="20dp"
        android:layout_toEndOf="@+id/view_divider"
        android:layout_toRightOf="@+id/view_divider"
        android:background="@drawable/bg_button"
        android:text="@string/btn_volume_off"
        app:layout_heightPercent="7%"
        app:layout_widthPercent="20%" />

    <View
        android:id="@+id/view_divider_2"
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:layout_below="@id/btn_volume_on"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp"
        android:background="@android:color/white" />

    <TextView
        android:id="@+id/tv_goal_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/view_divider_2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp"
        android:text="@string/tv_goal_time"
        android:textColor="#334252"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/tv_goal_get_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_goal_time"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="12dp"
        android:textColor="#2B2B2B"
        android:textSize="16sp"
        tools:text="暂未达成" />

    <View
        android:id="@+id/view_divider_3"
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:layout_below="@id/tv_goal_get_time"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp"
        android:background="@android:color/white" />

    <Button
        android:id="@+id/btn_update"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_below="@+id/view_divider_3"
        android:layout_centerInParent="true"
        android:layout_marginTop="24dp"
        android:background="@drawable/selector_bg_button"
        android:text="@string/btn_check_update"
        app:layout_heightPercent="7%"
        app:layout_widthPercent="20%" />

    <TextView
        android:id="@+id/tv_send_advice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="12dp"
        android:layout_marginLeft="12dp"
        android:layout_marginBottom="20dp"
        android:text="@string/tv_send_advice"
        android:textColor="#334252"
        android:textSize="12sp" />

</com.zhy.android.percent.support.PercentRelativeLayout>
