<?xml version="1.0" encoding="utf-8"?>
<com.zhy.android.percent.support.PercentRelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/iv_arrow"
        android:layout_width="82dp"
        android:layout_height="82dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:contentDescription="@string/app_name"
        android:src="@drawable/ic_arrow"
        app:layout_marginRightPercent="50%w"
        app:layout_marginTopPercent="18%w" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/iv_arrow"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:text="@string/tv_guide_1"
        android:textColor="#9BD7D5"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_i_know"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="36dp"
        android:background="@drawable/bg_guide_i_know"
        android:gravity="center"
        android:text="@string/tv_i_know"
        android:textColor="@android:color/white" />

</com.zhy.android.percent.support.PercentRelativeLayout>
