<?xml version="1.0" encoding="utf-8"?>
<com.zhy.android.percent.support.PercentLinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_marginLeftPercent="12%w"
        app:layout_marginRightPercent="12%w">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="164dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_top_update_dialog" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="-24dp"
            android:background="@drawable/bg_update_info"
            android:orientation="vertical"
            android:padding="12dp">

            <TextView
                android:id="@+id/tv_new_version"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                tools:text="发现新版本V0.8.30201" />

            <TextView
                android:id="@+id/tv_version_size"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                tools:text="新版大小：3.5MB" />

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/tv_version_update_log"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:layout_marginBottom="12dp"
                    android:maxLines="5"
                    android:textColor="#334252"
                    tools:text="1：测试\n2：测试\n3：测试\n4：测试\n" />

            </ScrollView>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.daimajia.numberprogressbar.NumberProgressBar
                    android:id="@+id/number_progress_bar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:visibility="invisible" />

                <Button
                    android:id="@+id/btn_update"
                    android:layout_width="match_parent"
                    android:layout_height="32dp"
                    android:background="@drawable/bg_score_panel"
                    android:text="@string/btn_update" />

                <Button
                    android:id="@+id/btn_install"
                    android:layout_width="match_parent"
                    android:layout_height="32dp"
                    android:background="@drawable/bg_score_panel"
                    android:text="@string/btn_install"
                    android:visibility="invisible" />

            </FrameLayout>

            <TextView
                android:id="@+id/tv_ignore_update"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="8dp"
                android:text="@string/tv_ignore_update"
                android:textSize="12sp" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_close_update"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <View
            android:layout_width="1dp"
            android:layout_height="50dp"
            android:background="@android:color/black" />

        <ImageView
            android:id="@+id/iv_close_update"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_error" />

    </LinearLayout>

</com.zhy.android.percent.support.PercentLinearLayout>
